[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/flappy.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GameOver.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[node name="GameOver" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -83.5
margin_top = 32.0
margin_right = 83.5
margin_bottom = 65.0
custom_fonts/font = SubResource( 1 )
text = "Game Over"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelScore" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -33.0
margin_top = -8.5
margin_right = 33.0
margin_bottom = 8.5
custom_fonts/font = SubResource( 2 )
text = "Score: 0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelHighScore" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -52.5
margin_top = 47.5
margin_right = 52.5
margin_bottom = 64.5
custom_fonts/font = SubResource( 2 )
text = "High Score: 0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
